# Competitive

./: .gitignore  .gitmodules  CMakeLists.txt  Complex.java  InputReader.java  Maths.java  OutputWriter.java  Pair.java  Point.java  README.md  Utilities.java  create.sh  gen.cpp  interact.py  task.template  template.cpp
C++/: fft.cpp  template.cpp
C++/CodeForces/: TaskA.cpp  TaskC.cpp  TaskE.cpp
Clion/: CMakeLists.txt  submission.template  task.template
Clion/testrunner/: main.cpp
Cpp/: .gitignore  CMakeLists.txt  run.template  submission.template  task.template  template.cpp
Cpp/CodeForces/: TaskB.cpp  TaskD.cpp
Cpp/archive/: 2D_01_BFS.cpp  Test.cpp
Cpp/archive/binary_search/: Binary Search.cpp  Lower_and_Upper.cpp  Real_number.cpp  firstTrue.cpp
Cpp/archive/digit_dp/: Sum of Digits.cpp
Cpp/archive/sqrt_decomposition/: SqrtRootDecomposition.cpp
Cpp/archive/trees/: 2D_01_BFS.cpp
Cpp/atcoder/: dsu.hpp  fenwicktree.hpp  internal_queue.hpp  internal_scc.hpp  internal_type_traits.hpp  maxflow.hpp  mincostflow.hpp  scc.hpp  segtree.hpp  string.hpp  twosat.hpp
Cpp/codeforces/: create.sh  runall.sh  template.cpp  test.sh  time.sh
Cpp/codeforces/template/: gen.cpp  runall.sh  sol.cpp  test.sh
Cpp/contests/atcoder/: EActiveInfants.cpp  FPathPassI.cpp
Cpp/contests/cf/: template  template.cpp
Cpp/contests/topcoder/: template.cpp
Cpp/contests/topcoder/TCplugins/pq/: MyPostProcessor.java
Cpp/output/: gen.cpp  main.cpp  test.sh
Cpp/tasks/: a.cpp  aa.cpp
Cpp/test/: CMakeLists.txt
Cpp/test/googletest/googlemock/docs/: cook_book.md  for_dummies.md
Cpp/test/googletest/googletest/docs/: advanced.md
Cpp/test/tests/: CMakeLists.txt  PointTest.cpp
Cpp/testrunner/: main.cpp
Cpp/topcoder/TCplugins/pq/: MyPostProcessor.java
Cpp/topcoder/codes/: CoprimeMatrix.cpp  CoprimeMatrix.txt  RectangularObstacle.cpp  RectangularObstacle.txt
Java/: CHelperReport.txt  Complex.java  Coordinate.java  Node.java  OutputWriter.java  Vertex.java  chelper.properties  sqrtDecomposition.java
Java/Algo/: AVL.java  RBTree.java
Java/FastIO/: Graph.java  LinkCutTree.java  Matrix.java  Pair.java  Point.java  Polynomial.java  STree.java  SegmentTree.java  SegmentTreeRMQ.java
Java/archive/unsorted/2019.05/2019.05.09 - unsorted/: Dijkstra.java
Java/output/: Main.java
Java/src/Codes/: BellmenFord.java  Dijkstra.java  Task.java  Task.json  TaskA.java
Java/src/FastIO/: Complex.java  Coordinate.java  DSU.java  EdgeWeight.java  FFTMultiply.java  Graph.java  InputReader.java  Maths.java  Node.java  OutputWriter.java  Pair.java  Point.java  Rectangle.java  STree.java  TreeNode.java  TrieString.java  Utilities.java  Vertex.java  VertexWeight.java
Kotlin/: README.MD  template.kt
archive/AdventOfCode2020/: AOC2b.cpp  AOC3.cpp  AdventOfCode1.cpp
archive/binary_search/: Binary Search.cpp  Equation_Solver.cpp
archive/sqrt_decomposition/: SqrtRootDecomposition.cpp
atcoder/: convolution.hpp  internal_bit.hpp  internal_csr.hpp  internal_math.hpp  internal_queue.hpp  lazysegtree.hpp  math.hpp  modint.hpp
codeforces/template/: sol.cpp  time.sh
output/: test.sh
terminator/: config
vscode/: extensions.md  settings.json.md
